--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
@@ -20,8 +20,8 @@
             android:layout_width="239dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="82dp"
+            android:layout_alignStart="@+id/Trend_btn"
+            android:layout_marginTop="65dp"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
             android:text="Check Availability"
@@ -87,16 +87,14 @@
             tools:layout_editor_absoluteY="318dp" />
 
         <Button
-            android:id="@+id/pay_btn"
+            android:id="@+id/Trend_btn"
             android:layout_width="239dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/car_wash_btn"
-            android:layout_alignStart="@+id/car_wash_btn"
-            android:layout_below="@+id/car_wash_btn"
-            android:layout_marginTop="37dp"
+            android:layout_below="@+id/relativeLayout"
+            android:layout_centerHorizontal="true"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
-            android:text="Payment"
+            android:text="Show Occupancy Trend "
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
@@ -109,7 +107,8 @@
             android:layout_height="100dp"
             android:layout_below="@+id/show_res_btn"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp">
+            android:layout_marginTop="24dp"
+            android:id="@+id/relativeLayout">
 
             <ProgressBar
                 android:id="@+id/progressbar1"
