--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices2.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices2.xml
@@ -26,7 +26,7 @@
         android:id="@+id/reserve_btn3"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="108dp"
         android:background="@drawable/rounded_gray_button"
         android:editable="false"
         android:onClick="Error"
@@ -45,7 +45,7 @@
         android:id="@+id/car_care"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/rounded_gray_button"
         android:editable="false"
         android:onClick="Error"
@@ -61,10 +61,33 @@
         app:layout_constraintTop_toBottomOf="@+id/show_res_btn3" />
 
     <Button
+        android:id="@+id/Trend_btn"
+        android:layout_width="239dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_button"
+        android:onClick="occupancyTrend"
+        android:padding="12dp"
+        android:text="Show Occupancy Trend "
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/reserve_btn3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/check_btn3" />
+
+    <Button
         android:id="@+id/show_res_btn3"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/rounded_gray_button"
         android:editable="false"
         android:onClick="Error"
@@ -83,7 +106,7 @@
         android:id="@+id/check_btn3"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="76dp"
         android:background="@drawable/rounded_button"
         android:onClick="checkAvailability"
         android:padding="12dp"
