--- a/materiallogindemo-master/app/src/main/res/layout/activity_check_availability_2.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_check_availability_2.xml
@@ -1,122 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/imageView7"
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="61dp"
-        app:srcCompat="@drawable/garaz1" />
+        android:stretchColumns="1">
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.443"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.504"
-        app:srcCompat="@drawable/car7" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_alignBottom="@+id/imageView4"
-        android:layout_alignLeft="@+id/imageView4"
-        android:layout_alignStart="@+id/imageView4"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.137"
-        app:srcCompat="@drawable/car8" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="500dp"
+                android:layout_height="457dp"
+                app:srcCompat="@drawable/garaz1" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_alignTop="@+id/imageView5"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/car11" />
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignStart="@+id/imageView8"
+                android:layout_marginBottom="185dp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.443"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.504"
+                app:srcCompat="@drawable/car12" />
 
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_alignLeft="@+id/imageView5"
-        android:layout_alignStart="@+id/imageView5"
-        android:layout_alignTop="@+id/imageView8"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/car12" />
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignBottom="@+id/imageView4"
+                android:layout_alignLeft="@+id/imageView4"
+                android:layout_alignStart="@+id/imageView4"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/imageView7"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.511"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.137"
+                app:srcCompat="@drawable/car12" />
 
-    <Spinner
-        android:id="@+id/SpotSpinner"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="11dp"
-        android:layout_toLeftOf="@+id/imageView9"
-        android:layout_toStartOf="@+id/imageView9"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="282dp" />
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignTop="@+id/imageView5"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="46dp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.454"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
+                app:srcCompat="@drawable/car12" />
 
-    <Button
-        android:id="@+id/btnMap"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-
-        android:layout_alignBottom="@+id/SpotSpinner"
-        android:layout_toEndOf="@+id/imageView9"
-        android:layout_toRightOf="@+id/imageView9"
-        android:background="@drawable/rounded_button"
-        android:padding="12dp"
-        android:text="Get Directions"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="110dp" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/SpotSpinner"
-        android:layout_alignStart="@+id/SpotSpinner"
-        android:layout_alignTop="@+id/btnMap"
-        android:text="Select a Spot Number" />
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignLeft="@+id/imageView5"
+                android:layout_alignStart="@+id/imageView5"
+                android:layout_alignTop="@+id/imageView8"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.512"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
+                app:srcCompat="@drawable/car12" />
 
 
-</RelativeLayout>
+            <!--   <Button
+           android:id="@+id/btnMap"
+           android:layout_width="wrap_content"
+           android:layout_height="40dp"
+
+           android:layout_alignBottom="@+id/SpotSpinner"
+           android:layout_toEndOf="@+id/imageView9"
+           android:layout_toRightOf="@+id/imageView9"
+           android:background="@drawable/rounded_button"
+           android:padding="12dp"
+           android:text="Get Directions"
+           android:textAllCaps="false"
+           android:textColor="@android:color/white"
+           android:textSize="14sp"
+           tools:layout_editor_absoluteX="37dp"
+           tools:layout_editor_absoluteY="110dp" />
+
+       <TextView
+           android:id="@+id/textView11"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignLeft="@+id/SpotSpinner"
+           android:layout_alignStart="@+id/SpotSpinner"
+           android:layout_alignTop="@+id/btnMap"
+           android:text="Select a Spot Number" />
+   -->
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="500dp"
+            android:background="@drawable/bacground1"
+            android:padding="12dp">
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignStart="@+id/btnMap"
+                android:layout_marginTop="23dp"
+                android:text="Select a Spot Number"
+                android:textColor="#4383cc"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/SpotSpinner"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/textView11"
+                android:layout_alignEnd="@+id/btnMap" />
+
+            <Button
+                android:id="@+id/btnMap"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/SpotSpinner"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="21dp"
+                android:background="@drawable/rounded_button"
+                android:padding="12dp"
+                android:text="Get Directions"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/btnMap"
+                android:layout_below="@+id/btnMap"
+                android:layout_marginTop="19dp"
+                android:text="Current Occupancy Trend"
+                android:textColor="#4383cc"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/SpotSpinner2"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/bargraph2"
+                android:layout_below="@+id/textView14"
+                android:layout_marginTop="12dp"
+                tools:layout_editor_absoluteX="180dp"
+                tools:layout_editor_absoluteY="282dp" />
+
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/bargraph2"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_alignStart="@+id/textView14"
+                android:layout_below="@+id/SpotSpinner2"
+                android:layout_marginTop="20dp"></com.github.mikephil.charting.charts.BarChart>
+
+
+        </RelativeLayout>
+
+    </TableLayout>
+
+
+
+
+</ScrollView>
