--- a/materiallogindemo-master/app/src/main/res/layout/activity_login.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/button_style"
             android:padding="12dp"
             android:text="Login"
             android:textColor="@android:color/white" />
